Fix NavigationTiming2

time_origin_ is not initialized in PerformanceResourceTiming ctor
for PerformanceNavigationTiming.  This got broken in crbug.com/2647643004

Bug: 732622
Change-Id: I735ea6777d88b0e89031654216d74f860e05bcb8